@@ -251,6 +251,11 @@ class LengowExport
     protected $cacheCombination;
 
     /**
+     * @var array excluded products for export
+     */
+    protected $excludedProducts;
+
+    /**
      * Construct new Lengow export.
      *
      * @param array $params optional options
@@ -476,6 +481,10 @@ class LengowExport
             }
         }
         foreach ($products as $p) {
+            // Ignore products with faulty combinations
+            if (in_array($p['id_product'], $this->excludedProducts)) {
+                continue;
+            }
             $productDatas = array();
             $product = new LengowProduct(
                 $p['id_product'],
@@ -504,7 +513,19 @@ class LengowExport
                 $productCount++;
             }
             if ($p['id_product'] && $p['id_product_attribute'] > 0) {
-                $this->loadCacheCombinations($p['id_product'], $fields);
+                if(!$this->loadCacheCombinations($product, $fields)) {
+                    LengowMain::log(
+                        'Export',
+                        LengowMain::setLogMessage(
+                            'log.export.error_no_product_combination',
+                            array('product_id' => $product->id)
+                        ),
+                        $this->logOutput
+                    );
+                    // Indicates that a product has failed combinations
+                    $this->excludedProducts[] = $product->id;
+                    continue;
+                }
                 if (isset($this->cacheCombination[$p['id_product']][$p['id_product_attribute']])) {
                     // Get additional data
                     $combinationDatas = $this->setAdditionalFieldsValues(
@@ -557,47 +578,34 @@ class LengowExport
     /**
      * Load cache combinations
      *
-     * @param integer $productId Prestashop product id
+     * @param LengowProduct $product Lengow product instance
      * @param array $fields list of fields
      *
-     * @throws LengowException no product combination
-     *
-     * @return array
+     * @return boolean
      */
-    public function loadCacheCombinations($productId, $fields)
+    public function loadCacheCombinations($product, $fields)
     {
-        if (isset($this->cacheCombination[$productId])) {
-            return $this->cacheCombination[$productId];
-        }
-        unset($this->cacheCombination);
-        $product = new LengowProduct(
-            $productId,
-            $this->language->id,
-            array(
-                'carrier' => $this->carrier,
-                'image_size' => LengowProduct::getMaxImageType()
-            )
-        );
-        $combinations = $product->getCombinations();
-        if (empty($combinations)) {
-            throw new LengowException(LengowMain::setLogMessage('log.export.error_no_product_combination'));
-        }
-        foreach ($combinations as $combination) {
-            $paId = $combination['id_product_attribute'];
-            foreach ($fields as $field) {
-                if (isset(self::$defaultFields[$field])) {
-                    $this->cacheCombination[$productId][$paId][$field] = $product->getData(
-                        self::$defaultFields[$field],
-                        $paId
-                    );
-                } else {
-                    $this->cacheCombination[$productId][$paId][$field] = $product->getData(
-                        $field,
-                        $paId
-                    );
+        if (!isset($this->cacheCombination[$product->id])) {
+            $this->cacheCombination = array();
+            $combinations = $product->getCombinations();
+            if (empty($combinations)) {
+                return false;
+            }
+            foreach ($combinations as $combination) {
+                $paId = $combination['id_product_attribute'];
+                foreach ($fields as $field) {
+                    if (isset(self::$defaultFields[$field])) {
+                        $this->cacheCombination[$product->id][$paId][$field] = $product->getData(
+                            self::$defaultFields[$field],
+                            $paId
+                        );
+                    } else {
+                        $this->cacheCombination[$product->id][$paId][$field] = $product->getData($field, $paId);
+                    }
                 }
             }
         }
+        return true;
     }
 
     /**
