@@ -10,6 +10,7 @@ Version 3.0.4
     - Bugfix: [export] Modifying Legacy Fields for Image Fields
     - Bugfix: [import] New parameter in updateQty() function for version 1.7.3
     - Bugfix: [import] Improved security to avoid duplicate synchronization
+    - Bugfix: [export] Product is ignored when it has faulty combinations
 
 =============================================================
 Version 3.0.3
